--- a/data-architect.html
+++ b/data-architect.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ha9fe7o8h4bx9hsn3bk41yfe4h'>Data Architect | Opportunity Portal</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/ha9fe7o8h4bx9hsn3bk41yfe4h'>Data Architect | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/data-architect-2858'>Data Architect - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi-corse'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi-corse'>
       Database Architect H/F - CDI (Corse) - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">France</span></p>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=oAZxafw0&__jvst=Employee&__jvsd=sXQGmfwz&__jvsc=Twitter&bid=nMPCmMwQ'>Qlik Careers - Analytics Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qc09Vfw0&k=Job&j=oAZxafw0&__jvst=Employee&__jvsd=sXQGmfwz&__jvsc=Twitter&bid=nMPCmMwQ'>Qlik Careers - Analytics Data Architect</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -159,7 +159,7 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/spinvi/j/2F4596C49A/'>Data Architect - Spinvi</a></h5> 
+<h5><a href='https://apply.workable.com/spinvi/j/2F4596C49A/'>Data Architect - Spinvi</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Spinvi is hiring!!! We have an opportunity for you to use your analytical skills, 
 work closely with your customer to understand their questions and needs, and 
@@ -289,7 +289,7 @@ dig?...</p>
 <p><span class="badge badge-light">Pittsburgh United States</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
+<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -340,7 +340,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4416285002?gh_src=2b1427962'>Job Application for Data Architect IV at XOR Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4416285002?gh_src=2b1427962'>Job Application for Data Architect IV at XOR Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -434,7 +434,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBFaVfw5&k=Job&j=oarGafwb&__jvst=Employee&__jvsd=sx69Wiwv&__jvsc=Twitter&bid=n3auaMw8'>GroupM North America Careers - Data Architect, Data &amp; Services</a></h5> 
 <p><span class="badge badge-light">North America New York, New York  North America</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
@@ -490,7 +490,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
